<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerticalActivity">

    <TextView
        android:text="@string/login_text"
        android:textSize="35sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:text="@string/login_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/ingrese_nombre"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:text="@string/login_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/ingrese_correo"
        android:inputType="textEmailAddress"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:text="@string/login_contraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/ingrese_contrasena"
        android:inputType="textPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:text="@string/login_numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/ingrese_numero"
        android:inputType="number"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <Button
        android:text="Regresar"
        android:id="@+id/btn_volver"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />


</LinearLayout>